# mcculloch-processors

./: LICENSE  canada_weather.ipynb  environment.yml  export_grid_interactive.py  main.py  mf6_output_processors.ipynb  pyproject.toml  requirements.txt
environment_canada/: README  ec_w_dld.py  ec_w_sch.py
gis/: README  gis_tif_checker.py
gis/examples/tucson_landcover_change/: tucson_landcover_change.ipynb
gis/examples/tucson_landcover_change/Data/Balanced_and_Critical_Watersheds/: Balanced_and_Critical_Watersheds.dbf  Balanced_and_Critical_Watersheds.shp  Balanced_and_Critical_Watersheds.shx
gis/examples/tucson_landcover_change/Data/Jurisdictional_Boundaries/: Jurisdictional_Boundaries_(JURISBND).dbf  Jurisdictional_Boundaries_(JURISBND).shp  Jurisdictional_Boundaries_(JURISBND).shx
gis/examples/tucson_landcover_change/Data/NLCD/: Annual_NLCD_FctImp_1985_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1986_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1987_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1988_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1989_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1990_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  Annual_NLCD_FctImp_1991_CU_C1V1_e88ec285-1ee1-44ad-9f9c-7bef52ff0f40.tiff.aux.xml  (+73 more)
modflow/: mf6_grd2shp.py
modflow/examples/: lpr.ipynb
modflow/examples/mf05-to-mf6/: mf05-to-mf6.ipynb
modflow/examples/mf05-to-mf6/og-mf05/2D_SS/: CHILD.ba6  (+11 more)
(+321 files in other folders)
