[project]
name = "mcculloch-processors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "cartopy>=0.25.0",
    "dash>=4.1.0",
    "fiona>=1.10.1",
    "flopy>=3.10.0",
    "gdal",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "notebook>=7.5.5",
    "numpy<2.0",
    "openpyxl>=3.1.5",
    "pandas<3.0",
    "pooch>=1.9.0",
    "pyemu>=1.4.0",
    "pyproj>=3.7.2",
    "pyshp>=3.0.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "rasterstats>=0.20.0",
    "requests>=2.33.1",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "wqchartpy>=0.1.10",
    "xarray>=2026.2.0",
    "xlrd>=2.0.2",
]

[tool.uv.sources]
gdal = { path = "wheels/gdal-3.12.2-cp312-cp312-win_amd64.whl" }
